[package]
name = "process-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.3", features = [
    "Win32",
    "Win32_Foundation",
    "ApplicationModel",
    "Win32_UI_Shell",
    "Win32_System_Com",
] }
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
] }
